dataset1235/2025-2/805158916/users/1651421245/executions/1584167357_208040576.log
== SUBMISSION (2025-08-27 14:52:26)
-- CODE: 
preco = float(input("digite o valor do preco"))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:53:12)
-- CODE: 
preco = float(input("digite o valor do preco"))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:55:37)
-- CODE: 
preco = float(input("digite o valor do preco"))
desconto = (15 / 100) * preco
preco_final =  preco - desconto
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco17.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:52:19)
-- CODE: 
preco = float(input("digite o valor do preco"))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:52:29)
-- CODE: 
preco = float(input("digite o valor do preco"))
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:57:20)
-- CODE: 
preco = float(input("digite o valor do preco"))
desconto = (15 / 100) * preco
preco_final =  preco - desconto
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:57:23)
-- CODE: 
preco = float(input("digite o valor do preco"))
desconto = (15 / 100) * preco
preco_final =  preco - desconto
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:55:32)
-- CODE: 
preco = float(input("digite o valor do preco"))
desconto = (15 / 100) * preco
preco_final =  preco - desconto
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
digite o valor do preco1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
digite o valor do preco85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
digite o valor do preco12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
digite o valor do preco8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
digite o valor do preco170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
digite o valor do preco17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:54:55)
-- CODE: 
preco = float(input("digite o valor do preco"))
desconto = (15 / 100) * preco
preco_final =  preco_final - desconto
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco_final =  preco_final - desconto
                   ^^^^^^^^^^^
NameError: name 'preco_final' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco_final =  preco_final - desconto
                   ^^^^^^^^^^^
NameError: name 'preco_final' is not defined
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco_final =  preco_final - desconto
                   ^^^^^^^^^^^
NameError: name 'preco_final' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco_final =  preco_final - desconto
                   ^^^^^^^^^^^
NameError: name 'preco_final' is not defined
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco_final =  preco_final - desconto
                   ^^^^^^^^^^^
NameError: name 'preco_final' is not defined
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    preco_final =  preco_final - desconto
                   ^^^^^^^^^^^
NameError: name 'preco_final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
